# minebot1.5

./: .gitignore  pyproject.toml
src/: help.py  main.py  minebot.py  shop.json  utils.py
src/cogs/: games.py  pets.py  player.py  shops.py
src/data/: pet_shop.json  shop.json
